package main.java.objetosSimples.biblioteca.solucion;

public enum EstadoDeCopia {
    DISPONIBLE,
    PRESTADO,
    PERDIDO,
    EN_REPARACION,
}
